feat: update documentation of all entities, unify name of method List to ListAll, and remove DeleteAt attribute form all entities
