# internal/infrastructure/handler/order.go
@@ -24,6 +24,7 @@ func NewOrderHandler(r repository.OrderRepository) *OrderHandler {
 	}
 }
 
+// ListAll godoc
 // @Summary List orders with pagination
 // @Description Get a list of orders with pagination
 // @Tags orders
@@ -31,12 +32,12 @@ func NewOrderHandler(r repository.OrderRepository) *OrderHandler {
 // @Produce  json
 // @Param offset query int true "Offset"
 // @Param limit query int true "Limit"
-// @Success 200 {array} entity.Product
+// @Success 200 {array} entity.Order "Orders retrieved successfully"
 // @Router /api/orders [get]
 func (h *OrderHandler) List(w http.ResponseWriter, r *http.Request) {
 	offset, limit := utils.GetPagination(r)
 
-	orders, err := h.usecase.List(offset, limit)
+	orders, err := h.usecase.ListAll(offset, limit)
 	if err != nil {
 		utils.HandleHTTPError(w, err, http.StatusNotFound)
 		return
@@ -45,13 +46,14 @@ func (h *OrderHandler) List(w http.ResponseWriter, r *http.Request) {
 	utils.HandleHTTPResponse(w, "Orders retrieved successfully", http.StatusOK, orders)
 }
 
-// @Summary Get a order
-// @Description Get a order by ID
+// GetByID godoc
+// @Summary Get a order by ID
+// @Description Retrieve a order using its ID
 // @Tags orders
 // @Accept  json
 // @Produce  json
-// @Param id path int true "order ID"
-// @Success 200 {object} entity.order
+// @Param id path int true "Order ID"
+// @Success 200 {object} entity.Order "Order retrieved successfully"
 // @Router /api/orders/{id} [get]
 func (h *OrderHandler) GetByID(w http.ResponseWriter, r *http.Request) {
 	id, err := utils.GetURLParam(r, "id")
@@ -69,12 +71,14 @@ func (h *OrderHandler) GetByID(w http.ResponseWriter, r *http.Request) {
 	utils.HandleHTTPResponse(w, "Order retrieved successfully", http.StatusOK, order)
 }
 
+// GetByClientID godoc
 // @Summary Get orders by client ID
-// @Description Get orders by client ID
+// @Description Retrieve orders using its client ID
 // @Tags orders
 // @Produce json
+// @Accept json
 // @Param id path uuid true "client ID"
-// @Success 200
+// @Success 200 {array} entity.Order "Orders retrieved successfully"
 // @Router /api/orders/client/{id} [get]
 func (h *OrderHandler) GetByClientID(w http.ResponseWriter, r *http.Request) {
 	id, err := utils.GetURLParam(r, "id")
@@ -92,13 +96,14 @@ func (h *OrderHandler) GetByClientID(w http.ResponseWriter, r *http.Request) {
 	utils.HandleHTTPResponse(w, "Orders retrieved successfully", http.StatusOK, orders)
 }
 
-// @Summary Create a order
-// @Description Create a new order
+// Create godoc
+// @Summary Create a new order
+// @Description Create a new order with the provided data
 // @Tags orders
 // @Accept  json
 // @Produce  json
-// @Param order body entity.Product true "Product"
-// @Success 201
+// @Param order body entity.Order true "Order data"
+// @Success 201 {object} entity.Order "Order created successfully"
 // @Router /api/orders [post]
 func (h *OrderHandler) Create(w http.ResponseWriter, r *http.Request) {
 	defer r.Body.Close()
@@ -123,13 +128,15 @@ func (h *OrderHandler) Create(w http.ResponseWriter, r *http.Request) {
 	utils.HandleHTTPResponse(w, "Order created successfully", http.StatusCreated, nil)
 }
 
-// @Sumanry Set status
-// @Description Set status
+// SetStatus godoc
+// @Summary Set status
+// @Description Set status of an order provided its ID
 // @Tags orders
 // @Accept  json
 // @Produce  json
 // @Param id path int true "order ID"
-// @Success 200
+// @Param order body entity.Order true "Order data"
+// @Success 200 {object} entity.Order "Order status updated successfully"
 // @Router /api/orders/{id} [put]
 func (h *OrderHandler) SetStatus(w http.ResponseWriter, r *http.Request) {
 	defer r.Body.Close()
@@ -157,13 +164,14 @@ func (h *OrderHandler) SetStatus(w http.ResponseWriter, r *http.Request) {
 	utils.HandleHTTPResponse(w, "Order status updated successfully", http.StatusOK, nil)
 }
 
+// Delete godoc
 // @Summary Delete a order
-// @Description Delete a order
+// @Description Delete an existing order using its ID
 // @Tags orders
 // @Accept  json
 // @Produce  json
 // @Param id path int true "order ID"
-// @Success 200
+// @Success 200 "Order deleted successfully"
 // @Router /api/orders/{id} [delete]
 func (h *OrderHandler) Delete(w http.ResponseWriter, r *http.Request) {
 	id, err := utils.GetURLParam(r, "id")
